--- a/AG1/Francisco_Santiburcio_Cortés_AG1.ipynb
+++ b/AG1/Francisco_Santiburcio_Cortés_AG1.ipynb
@@ -42,30 +42,8 @@
     },
     {
       "cell_type": "code",
-      "source": [],
       "metadata": {
-        "id": "qXBFCY3ukYka"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0puXpqShRse5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rTiqLuX2ZKuL",
-        "outputId": "b3a70620-1e39-4aec-bfa5-ffa1ac393a24",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "rTiqLuX2ZKuL"
       },
       "source": [
         "#Torres de Hanoi - Divide y venceras\n",
@@ -85,45 +63,21 @@
         "    print(\"Lleva la ficha desde \" + str(desde) + \" hasta \" + str(hasta))\n",
         "    Torres_Hanoi(N-1, 6-desde-hasta,  hasta)\n",
         "\n",
-        "Torres_Hanoi(2, 1, 3)\n",
-        "################################################################"
+        "Torres_Hanoi(2, 1, 3)"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Lleva la ficha desde 1 hasta 2\n",
-            "Lleva la ficha desde 1 hasta 3\n",
-            "Lleva la ficha desde 2 hasta 3\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "UTL6wiczQVDA"
-      },
-      "source": [],
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YwBudj2hYoMR",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c9eaf544-4ca9-4d30-fe8a-b2543ad83d24"
+        "id": "YwBudj2hYoMR"
       },
       "source": [
         "#Cambio de monedas - Técnica voraz\n",
-        "################################################################################\n",
+        "\n",
         "SISTEMA = [12, 5 ,2, 1  ]\n",
-        "################################################################\n",
+        "\n",
         "def cambio_monedas(CANTIDAD,SISTEMA):\n",
         "#....\n",
         "  SOLUCION = [0]*len(SISTEMA)\n",
@@ -138,24 +92,10 @@
         "      return SOLUCION\n",
         "\n",
         "  print(\"No es posible encontrar solucion\") \n",
-        "cambio_monedas(15,SISTEMA)\n",
-        "\n",
-        "    \n",
-        "################################################################"
+        "cambio_monedas(15,SISTEMA)\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[1, 0, 1, 1]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -169,11 +109,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H4Iwt2XRZTFr",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1863358d-f7de-4682-b4f8-56ea9ab20f24"
+        "id": "H4Iwt2XRZTFr"
       },
       "source": [
         "#N Reinas - Vuelta Atrás()\n",
@@ -186,13 +122,11 @@
         "  #print(SOLUCION)\n",
         "  #Si la solución tiene dos valores iguales no es valida => Dos reinas en la misma fila\n",
         "  for i in range(etapa+1):\n",
-        "    #print(\"El valor \" + str(SOLUCION[i]) + \" está \" +  str(SOLUCION.count(SOLUCION[i])) + \" veces\")\n",
         "    if SOLUCION.count(SOLUCION[i]) > 1:       \n",
         "      return False\n",
         "  \n",
         "    #Verifica las diagonales\n",
         "    for j in range(i+1, etapa +1 ):\n",
-        "      #print(\"Comprobando diagonal de \" + str(i) + \" y \" + str(j))\n",
         "      if abs(i-j) == abs(SOLUCION[i]-SOLUCION[j]) : return False\n",
         "  return True\n",
         "\n",
@@ -233,60 +167,24 @@
         "\n",
         "reinas(8,solucion=[],etapa=0)"
       ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[4, 7, 5, 2, 6, 1, 3, 8]\n",
-            "[5, 7, 2, 6, 3, 1, 4, 8]\n",
-            "[6, 3, 5, 7, 1, 4, 2, 8]\n",
-            "[6, 4, 7, 1, 3, 5, 2, 8]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eTZclKH9QV0R",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "91fe38ab-3ab8-4492-8551-b7206a40519a"
+        "id": "eTZclKH9QV0R"
       },
       "source": [
         "escribe_solucion([1, 5, 8, 6, 3, 7, 2, 4])"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            " X  -  -  -  -  -  -  - \n",
-            " -  -  -  -  -  -  X  - \n",
-            " -  -  -  -  X  -  -  - \n",
-            " -  -  -  -  -  -  -  X \n",
-            " -  X  -  -  -  -  -  - \n",
-            " -  -  -  X  -  -  -  - \n",
-            " -  -  -  -  -  X  -  - \n",
-            " -  -  X  -  -  -  -  - "
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TocxR55dQWq5",
-        "outputId": "90cdf27e-b470-474a-88f3-b62f53d57215",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 381
-        }
+        "id": "TocxR55dQWq5"
       },
       "source": [
         "#Viaje por el rio - Programación dinámica\n",
@@ -358,44 +256,213 @@
         "calcular_ruta(RUTA, 0,6)  "
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1.- 1D a fuerza bruta (1 Diseño) \n",
+        "import numpy as np\n",
+        "import random\n",
+        "import time\n",
+        "Lista_1D = [random.randrange(10000) for x in range(950)]\n",
+        "def mas_cercanos(lst):\n",
+        "  if len(lst) < 3:\n",
+        "    return [lst[0],[1]]\n",
+        "  lista_pareja_mínimos = list()\n",
+        "  lista_mínimos = list()\n",
+        "  for i,value in enumerate(lst):\n",
+        "    lst_diferencias = list(abs(np.array(lst)-value))\n",
+        "    lst_filtrada = list(filter(lambda x: x != 0,lst_diferencias))\n",
+        "    lista_pareja_mínimos.append([i,lst_diferencias.index(min(lst_filtrada))])\n",
+        "    lista_mínimos.append(min(lst_filtrada))\n",
+        "  pareja = lista_pareja_mínimos[lista_mínimos.index(min(lista_mínimos))]\n",
+        "  return [lst[pareja[0]],lst[pareja[1]]]\n",
+        "# mas_cercanos([3403, 4537, 9089, 9746, 7259]) \n",
+        "start = time.time()\n",
+        "print(\"Los dos puntos más cercanos sin considerar que los puntos se puedan repetir (se elige el más cercano despues del punto en sí): \"+str(mas_cercanos([3403, 4537, 9089, 9746, 7259])))\n",
+        "end = time.time()\n",
+        "tiempo = end - start\n",
+        "print(\"Tiempo de ejecución: \"+str(tiempo)+ \" s \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bl-9PkEFEHl4",
+        "outputId": "b0f9e5e3-8a54-4b30-e835-aacebfdcce0e"
+      },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "PRECIOS\n",
-            "[0, 5, 4, 3, 8, 8, 11]\n",
-            "[9999, 0, 999, 2, 3, 8, 7]\n",
-            "[9999, 9999, 0, 1, 6, 4, 7]\n",
-            "[9999, 9999, 9999, 0, 5, 6, 9]\n",
-            "[9999, 9999, 9999, 9999, 0, 999, 4]\n",
-            "[9999, 9999, 9999, 9999, 9999, 0, 3]\n",
-            "[9999, 9999, 9999, 9999, 9999, 9999, 9999]\n",
-            "\n",
-            "RUTA\n",
-            "[0, 0, 0, 0, 1, 2, 5]\n",
-            "['', 1, 1, 1, 1, 3, 4]\n",
-            "['', '', 2, 2, 3, 2, 5]\n",
-            "['', '', '', 3, 3, 3, 3]\n",
-            "['', '', '', '', 4, 4, 4]\n",
-            "['', '', '', '', '', 5, 5]\n",
-            "['', '', '', '', '', '', '']\n",
-            "\n",
-            "La ruta es:\n"
+            "Los dos puntos más cercanos sin considerar que los puntos se puedan repetir (se elige el más cercano despues del punto en sí): [9089, 9746]\n",
+            "Tiempo de ejecución: 0.0014121532440185547 s \n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tenemos un bucle for sin embargo tenemos uso de funciones que pueden contener código con más bucles, sobre todo aquellos métodos de búsquema como el \"index\", que ha de buscar un valor en una lista, por tanto tenemos un Orden de complejidad de 0(n^x / x>2), ya que filtramos una lista, hacemos una búsqueda, además de insertar listas dentro de listas. Con un N de datos grande la complejidad se dispara"
+      ],
+      "metadata": {
+        "id": "6Qgjv5ToSq9m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "Lista_1D = [random.randrange(10000) for x in range(950)]\n",
+        "# Practica Individual: Encontrar los dos puntos más cercanos\n",
+        "# 1.- 1D a fuerza bruta\n",
+        "def mas_cercanos(lst):\n",
+        "  puntos = [lst[0],lst[1]]\n",
+        "  if len(lst) < 3:\n",
+        "    return puntos\n",
+        "  menor = abs(lst[0]-lst[1])\n",
+        "  posiciones = [0,1]\n",
+        "  for i, value_i in enumerate(lst):\n",
+        "    for j,value_j in enumerate(lst):\n",
+        "      if i != j and abs(value_i-value_j) <= menor:\n",
+        "        menor = abs(value_i-value_j)\n",
+        "        posiciones[0] = i\n",
+        "        posiciones[1] = j\n",
+        "  puntos = [lst[posiciones[0]],lst[posiciones[1]]]\n",
+        "  return puntos\n",
+        "    \n",
+        "# mas_cercanos([3403, 4537, 9089, 9746, 7259])\n",
+        "start = time.time()\n",
+        "print(\"Los dos puntos más cercanos considerando que un punto se repite: \"+str([3403, 4537, 9089, 9746, 7259]))\n",
+        "end = time.time()\n",
+        "tiempo = end - start\n",
+        "print(\"Tiempo de ejecución: \"+str(tiempo)+ \" s \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         },
+        "id": "Ezha81oI_tAV",
+        "outputId": "92e57f40-3d0c-4699-fe30-deb7e41d1e3e"
+      },
+      "execution_count": null,
+      "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "',0,2,5'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 2
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Los dos puntos más cercanos considerando que un punto se repite: [3403, 4537, 9089, 9746, 7259]\n",
+            "Tiempo de ejecución: 0.00028586387634277344 s \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El orden de complejidad es O(n^2), por que tenemos dos bucles for anidados. Sale mucho mejor que el anterior con un N grande, por tanto deducimos que el anterior tiene un orden de complejidad mayor. Podemos reducir su complejidad si usamos la técnica de divide y vencerás"
+      ],
+      "metadata": {
+        "id": "JzbMnic9CG1L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2.- Divide y vencerás\n",
+        "Lista_1D = [random.randrange(10000) for x in range(950)]\n",
+        "Lista_1D_1 = [3403, 4537, 9089, 9746, 7259]\n",
+        "def mas_cercanos(lista,menor,puntos):\n",
+        "  if len(lista) < 3:\n",
+        "    print(puntos)\n",
+        "  else:\n",
+        "    for i, value in enumerate(lista):\n",
+        "      if i!= 0 and abs(lista[0]-lista[i]) <= menor:\n",
+        "        menor = abs(lista[0]-lista[i])\n",
+        "        puntos = [lista[0],lista[i]]\n",
+        "    lista.pop(0)\n",
+        "    mas_cercanos(lista,menor,puntos)\n",
+        "\n",
+        "start = time.time()\n",
+        "print(\"Los dos puntos más cercanos considerando que un punto se repite: \"+str(mas_cercanos(Lista_1D_1,abs(Lista_1D_1[0]-Lista_1D_1[1]),[0,1])))\n",
+        "end = time.time()\n",
+        "tiempo = end - start\n",
+        "print(\"Tiempo de ejecución: \"+str(tiempo)+ \" s \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0JHgupZHEhUx",
+        "outputId": "1e1f3d3c-b348-4c95-f880-781fd1edf90b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[9089, 9746]\n",
+            "Los dos puntos más cercanos considerando que un punto se repite: None\n",
+            "Tiempo de ejecución: 0.00044226646423339844 s \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El tiempo de ejecución se reduce considerablemente en comparación con los anteriores algoritmos, pero esto se debe a que el N es pequeño. Ya sabemos que el uso de la recursividad para conjuntos de datos grandes dispara la complejidad del algoritmo"
+      ],
+      "metadata": {
+        "id": "T8S8tIqSXyph"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3.- Extender algoritmo a 2D y 3D\n",
+        "import numpy as np\n",
+        "import time\n",
+        "lista = [[1122, 6175],[135, 4076],[7296, 2741]]\n",
+        "def mas_cercanos(lista,menor,puntos):\n",
+        "  if len(lista) < 2:\n",
+        "    print(puntos)\n",
+        "  else:\n",
+        "    for i, value in enumerate(lista):\n",
+        "      if i!= 0 and np.linalg.norm(np.asarray(lista[0])-np.asarray(lista[i])) <= menor:\n",
+        "        menor = np.linalg.norm(np.asarray(lista[0])-np.asarray(lista[i]))\n",
+        "        puntos = [lista[0],lista[i]]\n",
+        "    lista.pop(0)\n",
+        "    mas_cercanos(lista,menor,puntos)\n",
+        "\n",
+        "start = time.time()\n",
+        "print(mas_cercanos(lista,np.linalg.norm(np.asarray(lista[0])-np.asarray(lista[1])),[0,1]))\n",
+        "end = time.time()\n",
+        "tiempo = end - start\n",
+        "print(\"Tiempo de ejecución: \"+str(tiempo)+ \" s \")"
+      ],
+      "metadata": {
+        "id": "OpgT2yeqbivL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "51642920-2334-48f0-d8e5-2e1545cc7daf"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1122, 6175], [135, 4076]]\n",
+            "None\n",
+            "Tiempo de ejecución: 0.0005152225494384766 s \n"
+          ]
         }
       ]
     }
