--- a/AG1/Francisco_Santiburcio_Cortés_AG1.ipynb
+++ b/AG1/Francisco_Santiburcio_Cortés_AG1.ipynb
@@ -317,6 +317,7 @@
       "cell_type": "code",
       "source": [
         "import time\n",
+        "import random\n",
         "Lista_1D = [random.randrange(10000) for x in range(950)]\n",
         "# Practica Individual: Encontrar los dos puntos más cercanos\n",
         "# 1.- 1D a fuerza bruta\n",
@@ -337,7 +338,7 @@
         "    \n",
         "# mas_cercanos([3403, 4537, 9089, 9746, 7259])\n",
         "start = time.time()\n",
-        "print(\"Los dos puntos más cercanos considerando que un punto se repite: \"+str([3403, 4537, 9089, 9746, 7259]))\n",
+        "print(\"Los dos puntos más cercanos considerando que un punto se repite: \"+str(mas_cercanos([3403, 4537, 9089, 9746, 7259])))\n",
         "end = time.time()\n",
         "tiempo = end - start\n",
         "print(\"Tiempo de ejecución: \"+str(tiempo)+ \" s \")"
@@ -347,16 +348,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ezha81oI_tAV",
-        "outputId": "92e57f40-3d0c-4699-fe30-deb7e41d1e3e"
+        "outputId": "c2bf28d9-0aa6-42be-dd83-da4c7315a312"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Los dos puntos más cercanos considerando que un punto se repite: [3403, 4537, 9089, 9746, 7259]\n",
-            "Tiempo de ejecución: 0.00028586387634277344 s \n"
+            "Los dos puntos más cercanos considerando que un punto se repite: [9746, 9089]\n",
+            "Tiempo de ejecución: 0.00030422210693359375 s \n"
           ]
         }
       ]
@@ -453,7 +454,7 @@
         },
         "outputId": "51642920-2334-48f0-d8e5-2e1545cc7daf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
