--- a/TC/Francisco_Santiburcio_Cortés_Trabajo_Práctico.ipynb
+++ b/TC/Francisco_Santiburcio_Cortés_Trabajo_Práctico.ipynb
@@ -234,6 +234,7 @@
         "id": "CJb5sQ0qkENy"
       },
       "source": [
+        "\n",
         "def fuerza_bruta(numeros,simbolos,solucion):\n",
         "  sol_final = None\n",
         "  sol = []\n",
@@ -248,7 +249,7 @@
         "    for j in range(len(simbolos_copy)):\n",
         "      # A continuación se van a crear bufferes para almacenar los símbolos y números eliminados de las listas copiadas de las originales\n",
         "      # con el fin de volver a insertarlos en estas listas si la expresión resultado de combinar números y símbolos no coincide con la solución.\n",
-        "      # De esta forma volvemos hacia atrás y volvemos a probar nuevas combinaciones\n",
+        "      # De esta forma volvemos hacia atrás y volvemos a probar nuevas combinaciones.\n",
         "      buf2 = simbolos_copy[j]\n",
         "      sol.append(simbolos_copy[j])\n",
         "      simbolos_copy.pop(j)\n",
@@ -285,13 +286,16 @@
         "                  # Quinto número\n",
         "                  for r in range(len(numeros_copy)):\n",
         "                    sol.append(numeros_copy[r])\n",
-        "                    # Con esta condición se evalua si la posible expresión da la solución\n",
+        "                    # Con esta condición se evalua si la posible\n",
+        "                    # expresión da la solución\n",
         "                    # recibida como parámetro de entrada\n",
         "                    if eval(''.join(sol)) == solucion:\n",
         "                      sol_final = ''.join(sol)\n",
-        "                    # Si no se cumple volvemos hacia atrás eliminando el último número\n",
+        "                    # Si no se cumple volvemos hacia atrás\n",
+        "                    # eliminando el último número\n",
         "                    sol = sol[:-1]\n",
-        "                  # Si no encuentra ningún número que cumpla la condición eliminamos el anterior símbolo\n",
+        "                  # Si no encuentra ningún número que\n",
+        "                  # cumpla la condición eliminamos el anterior símbolo\n",
         "                  # Y así sucesivamente\n",
         "                  sol = sol[:-1]\n",
         "                  simbolos_copy.insert(w,buf8)\n",
@@ -318,7 +322,7 @@
         "\n",
         "  return sol_final\n"
       ],
-      "execution_count": 12,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -328,16 +332,16 @@
         "simbolos = ['+','-','*','/']\n",
         "solucion = 10\n",
         "expresion = fuerza_bruta(numeros,simbolos,solucion)\n",
-        "print(\"La expresion resultado es: \"+str(expresion))"
+        "print(\"La expresion resultado es: \"+str(expresion)+\"=\"+str(solucion))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "K74VIU8zkS94",
-        "outputId": "55342340-818b-44f5-e0d9-7c1ec5363d02"
+        "outputId": "b2f87f12-3960-4458-e908-a5893fa17244"
       },
-      "execution_count": 13,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +368,13 @@
         "\n",
         "**N1·N2·(N1-1)·(N2-1)·(N1-2)·(N2-2)·(N1-3)·(N2-3)·(N1-4)**\n",
         "\n",
-        "Tendríamos un orden de complejidad polinómico de grado bastante alto."
+        "Vemos como los tamaños de las listas se van reduciendo cada vez que se pasa de un bucle a otro bucle.\n",
+        "\n",
+        "Tendríamos un orden de complejidad polinómico de un grado bastante alto.\n",
+        "\n",
+        "Si el problema se complicase y la expresión resultante fuese muy mayor de 9 dígitos la complejidad del problema se dispararía a un orden factorial:\n",
+        "\n",
+        "**n! = n·(n-1)·(n-2)·(n-3)·...(n-n)**"
       ],
       "metadata": {
         "id": "qsVyw8AIYhm9"
@@ -387,7 +397,7 @@
         "  if len(numeros) == 4: # 5 de los 9 números han sido usados, quedan 4.\n",
         "    # print(f\"Posible Solucion {solucion}\")\n",
         "    if eval(solucion) == objetivo: # Evaluamos si la posible solución da el valor del objetivo\n",
-        "      print(\"Solución Correcta\\n\")\n",
+        "      # print(\"Solución Correcta\\n\")\n",
         "      return solucion # Si se cumple la condición superior, hemos llegado a una solución del problema\n",
         "    else:\n",
         "      if print_iteraciones == True: print(\"Solución Incorrecta\\n\")# Si no se cumple, la solución es incorrecta, y volvemos un paso atrás\n",
@@ -421,7 +431,7 @@
       "metadata": {
         "id": "tz5vuEclIjO4"
       },
-      "execution_count": 35,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -432,26 +442,28 @@
         "  simbolos = [\"+\", \"-\", \"/\", \"*\"]\n",
         "  return divide_venceras_recursiva(digits,simbolos,\"\", solucion, 1, False)\n",
         "\n",
-        "solucion = 3\n",
+        "solucion = 66\n",
+        "start = time.time()\n",
         "expresion = divide_venceras(solucion)\n",
-        "print(\"La expresión: \"+str(expresion)+\"=\"+str(solucion))"
+        "end = time.time()\n",
+        "print(\"La expresión: \"+str(expresion)+\"=\"+str(solucion))\n",
+        "print(\"Tarda un tiempo de :\"+str(end-start))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SmXdIQW3KEHR",
-        "outputId": "65c6b6ef-40c1-473f-baf9-250ef1251c27"
+        "outputId": "fe17f715-d552-4901-cc62-e7d3af586a75"
       },
-      "execution_count": 40,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Solucion Correcta\n",
-            "\n",
-            "La expresión: 1+4-3/9*6=3\n"
+            "La expresión: 5/1+9*7-2=66\n",
+            "Tarda un tiempo de :0.8715646266937256\n"
           ]
         }
       ]
@@ -514,23 +526,10 @@
         "tiempo_divide_venceras = start3 - start2"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vbDMj8dIp68_",
-        "outputId": "f0bfe8f5-3dca-460c-e77d-2a49b0cd08d4"
+        "id": "vbDMj8dIp68_"
       },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Solucion Correcta\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 99,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -545,18 +544,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "noZtnyUHtAvR",
-        "outputId": "90778970-701a-4b69-ccba-297ddd9c5bf2"
+        "outputId": "1f5c013c-3748-4b5b-9a12-9b66b559f99b"
       },
-      "execution_count": 42,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Expresion Fuerza Bruta: 9*8/6-7+2\n",
-            "Tiempo Fuerza Bruta: 2.9473021030426025 segundos\n",
+            "Tiempo Fuerza Bruta: 2.9016220569610596 segundos\n",
             "Expresion Divide y Vencerás: 1+4/3*9-6\n",
-            "Tiempo Divide y Vencerás: 0.1809406280517578 segundos\n"
+            "Tiempo Divide y Vencerás: 0.18272805213928223 segundos\n"
           ]
         }
       ]
@@ -585,7 +584,7 @@
         "import time\n",
         "digits = [str(n) for n in range(1,10)]\n",
         "simbolos = [\"+\", \"-\", \"/\", \"*\"]\n",
-        "solucion = 200\n",
+        "solucion = 99\n",
         "start1 = time.time()\n",
         "expresion_fuerza_bruta = fuerza_bruta(digits,simbolos,solucion)\n",
         "start2 = time.time()\n",
@@ -597,7 +596,7 @@
       "metadata": {
         "id": "40Ss8yUNtyKr"
       },
-      "execution_count": 49,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -613,18 +612,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7OjKHOHDt1fm",
-        "outputId": "05b7bde0-0982-45da-d3ac-99338380f053"
+        "outputId": "ceb835c6-a057-4590-ec9d-98cb45fc2e4e"
       },
-      "execution_count": 50,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Expresion Fuerza Bruta: None\n",
-            "Tiempo Fuerza Bruta: 2.878248691558838 segundos\n",
+            "Tiempo Fuerza Bruta: 2.921294927597046 segundos\n",
             "Expresion Divide y Vencerás: None\n",
-            "Tiempo Divide y Vencerás: 3.0050580501556396 segundos\n"
+            "Tiempo Divide y Vencerás: 2.981646776199341 segundos\n"
           ]
         }
       ]
@@ -632,7 +631,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Cuando no existe ninguna expresión matemática que sea capaz de lograr la solución que tenemos de entrada, ambos algoritmos tardan aproximadamente lo mismo ya que recorren todas las posibles combinaciones. Esto demuestra que en el caso peor ambos algoritmos son iguales en lo que a complejidad compete y en el caso promedio el algoritmo de divide y vencerás es mucho más óptimo."
+        "Cuando no existe ninguna expresión matemática que sea capaz de lograr la solución que tenemos de entrada, ambos algoritmos tardan aproximadamente lo mismo ya que recorren todas las posibles combinaciones. Esto demuestra que en el caso peor ambos algoritmos son muy similares en orden de complejidad y en el caso promedio el algoritmo de divide y vencerás es mucho más óptimo."
       ],
       "metadata": {
         "id": "hOvUL70WwKSB"
@@ -659,11 +658,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sJ-N2etjkyWc"
+        "id": "sJ-N2etjkyWc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f56772c-d2f2-471c-b6b5-975f7d4ddef5"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "import random as rand\n",
+        "n = 4\n",
+        "lista_números_aleatorios = list()\n",
+        "[lista_números_aleatorios.append(rand.randint(10,100)) for w in range(n)]\n",
+        "lista_números_aleatorios"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[29, 33, 60, 70]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -675,29 +695,31 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "xMYEosUVYpXI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_Cmj-PVylMsa"
-      },
-      "source": [
-        "Respuesta"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "Jkx8GeiYlUz1"
+        "id": "Jkx8GeiYlUz1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f38949e5-ec9b-4899-8be2-dd1e7eeb6ae1"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "for solucion in lista_números_aleatorios:\n",
+        "  print(\"La expresión: \"+str(divide_venceras(solucion))+\"=\"+str(solucion))"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La expresión: 3+5*7/1-9=29\n",
+            "La expresión: 3+9*4/1-6=33\n",
+            "La expresión: 5/1+9*7-8=60\n",
+            "La expresión: 5+8*9/1-7=70\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -714,7 +736,7 @@
         "id": "YKQ_mRBttWsP"
       },
       "source": [
-        "Respuesta"
+        "Las referencias usadas son el temario de la asignatura y el blog indicado arriba, de donde se ha sacado la tablas que indica la cantidad de combinaciones posibles dependiendo de el tipo de combinatoria seleccionada, en nuestro caso permutación y variación."
       ]
     },
     {
@@ -732,8 +754,53 @@
         "id": "IE0uZmo-tZu-"
       },
       "source": [
-        "Respuesta"
+        "**·** El problema se puede complicar hasta el punto de convertirse en un **NP-Hard**. Si se permite que los signos o los números se repitan dentro de la expresión el orden de complejidad crece muchísimo y habría que reajustar todo el código porque el problema ya no tiene restricciones de repetición.\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import itertools as iter\n",
+        "import random as rd\n",
+        "numeros = [str(n) for n in range(1,10)]\n",
+        "rd.shuffle(numeros)\n",
+        "numeros_pt = list(iter.permutations(numeros)) # Permutacion con repeticion"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r1myd661T2DH",
+        "outputId": "dd327abb-173b-4a9e-86f9-a9a2817b3a7f"
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "IOPub data rate exceeded.\n",
+            "The notebook server will temporarily stop sending output\n",
+            "to the client in order to avoid crashing it.\n",
+            "To change this limit, set the config variable\n",
+            "`--NotebookApp.iopub_data_rate_limit`.\n",
+            "\n",
+            "Current values:\n",
+            "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+            "NotebookApp.rate_limit_window=3.0 (secs)\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Solo con las permutaciones con repeticiones de 9 números sobrepasa el data_rate_limit"
+      ],
+      "metadata": {
+        "id": "0LEsd2wqXo2c"
+      }
     }
   ]
 }
